syntax = "proto3";
package poktroll.session;

option go_package = "github.com/pokt-network/poktroll/x/session/types";

import "cosmos_proto/cosmos.proto";
import "poktroll/shared/service.proto";

// NOTE: Using signed integers for consistency with the cosmos SDK

// SessionHeader is a lightweight header for a session that can be passed around.
// It is the minimal amount of data required to hydrate & retrieve all data relevant to the session.
message SessionHeader {
  string application_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"]; // The Bech32 address of the application using cosmos' ScalarDescriptor to ensure deterministic encoding
  poktroll.shared.Service service = 2; // The service this session is for
  int64 session_start_block_height = 3; // The height at which this session started
  // NOTE: session_id can be derived from the above values using on-chain but is included in the header for convenience
  string session_id = 4; // A unique pseudoranom ID for this session
  int64 session_end_block_height = 5; // The height at which this session ended, this is the last block of the session
}
